# Tarea-Corta---CE---2103

./: CMakeLists.txt  Hawaiana.cpp  Hawaiana.h  Vegetariana.cpp  Vegetariana.h  main.cpp
Fabrica/Fabrica/: Fabrica.pro  fabrica.cpp  fabrica.h  fabrica.ui  informacion.cpp  informacion.h  informacion.ui  main.cpp  mainwindow.cpp  mainwindow.ui
Fabrica/build-Fabrica-Desktop_Qt_5_11_1_GCC_64bit-Debug/: Fabrica  Makefile  moc_fabrica.cpp  moc_mainwindow.cpp  ui_fabrica.h  ui_mainwindow.h
GestorMemoria/: GestorMemoria.cpp  GestorMemoria.h  Memoria.cpp  Memoria.h  Pagina.cpp  Pagina.h
Pizzas/: Basica.cpp  Basica.h  BordeQueso.cpp  BordeQueso.h  Hawaiana.cpp  Hawaiana.h  Suprema.cpp  Suprema.h
