cmake_minimum_required(VERSION 3.12)
project(Tarea-Corta---CE---2103)

set(CMAKE_CXX_STANDARD 14)

add_executable(Tarea-Corta---CE---2103 main.cpp GestorMemoria/Memoria.cpp GestorMemoria/Memoria.h GestorMemoria/GestorMemoria.cpp GestorMemoria/GestorMemoria.h GestorMemoria/Pagina.cpp GestorMemoria/Pagina.h Pizzas/Basica.cpp Pizzas/Basica.h Pizzas/BordeQueso.cpp Pizzas/BordeQueso.h Pizzas/Hawaiana.cpp Pizzas/Hawaiana.h Pizzas/Vegetariana.cpp Pizzas/Vegetariana.h Pizzas/Suprema.cpp Pizzas/Suprema.h)